@@ -1,0 +1,600 @@
+<h2>Download <b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> 2.0</h2>
+
+<a name="2.0"></a>
+<table border="0" cellpadding="3" rules="rows" width="100%">
+  
+  
+  <!-- use this as template for new entry !-->
+  <tbody><tr>
+    <th></th>
+    <th>Platform</th>
+    <th>Version</th>
+    <th>Go here</th>
+    <th><b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> version</th>
+    <th>Packager</th>
+  </tr>
+  
+  <tr bgcolor="#e8ffe8">
+    <td>
+    </td>
+    
+    <td>
+      <font size="+1"><b>GNU/Linux</b></font>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p align="center">
+	<img src="../images/officiallogo-nd-50.png">
+      </p>
+    </td>
+    
+    <td>
+      Debian
+    </td>
+    <td>
+      Sid
+    </td>
+    <td>
+      <em>included with distribution</em>
+    </td>
+    <td>2.0.2</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>
+      <p align="center">
+	<img src="../images/openlogo-nd-50.png">
+      </p>
+    </td>
+    <td>
+      Debian
+    </td>
+    <td>
+      Woody
+    </td>
+    <td><b>go <a href="http://afavant.elte.hu/%7Ewferi/lilypond/">here</a></b>
+    </td>
+    <td>2.0.0</td>
+    <td><a href="mailto:wferiATafavant.elte.hu">Ferenc Wagner</a></td>
+  </tr>
+
+  
+  <tr>
+    <td><p align="center"><img src="../images/mandrake-logo.jpeg"></p></td>
+    <td>
+      Mandrake
+    </td>
+    <td>
+      9.1
+    </td>
+    <td>
+      <b>Go to <a href="http://rpm.nyvalls.se/sound9.1.html">
+	  Thac's RPMs for mandrake</a>
+      </b>
+      (<a href="#mandrake-notes">NOTE</a>)
+    </td>
+    <td>2.0.1</td>
+    <td>Thac's RPMs for Mandrake</td>
+  </tr>
+
+  
+  <tr>
+    <td><p align="center"><img src="../images/slackware-logo.png"></p></td>
+    <td>
+      Slackware 
+    </td>
+    <td>
+      9
+    </td>
+    <td>
+      <b>Download
+	<a href="ftp://ftp.connection.com.br/linux/slackware-9/lilypond/lilypond-2.0.1-i386-1.tgz">tarball</a></b>
+    </td>
+    <td>2.0.1</td>
+    <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
+  </tr>
+
+  
+  <tr>
+    <td><p align="center"><img src="../images/suse-logo.png"></p></td>
+    <td>
+      SUSE
+    </td>
+    <td>
+      
+    </td>
+    <td>
+      <em>included
+	<a href="ftp://ftp.suse.com/pub/suse/i386/current/suse/i586/lilypond-2.0.3-48.i586.rpm">with
+	distribution</a></em>
+    </td>
+    <td>2.0.3</td>
+    <td><a href="http://www.suse.com">SUSE</a></td>
+  </tr>
+
+  
+  <tr>
+    <td><p align="center"><img src="../images/gentoo.jpeg"></p></td>
+    <td>
+      Gentoo
+    </td>
+    <td>
+      
+    </td>
+    <td>
+      <b>Go <a href="http://packages.gentoo.org/packages/?category=media-sound;name=lilypond">here</a>.
+      </b>
+    </td>
+    <td>2.0.0</td>
+    <td></td>
+  </tr>
+
+
+  <tr bgcolor="#e8ffe8">
+    <td>
+    </td>
+    
+    <td>
+      <font size="+1"><b>Other</b></font>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+  
+  <tr>
+    <td><p align="center"><img src="../images/macosx.jpeg"></p></td>
+    <td>
+      MacOS X/Fink
+    </td>
+    <td>
+      <tt>current-unstable</tt>
+    </td>
+    <td>
+      <b>  Go <a href="macos.html">here</a></b>
+    </td>
+    <td>2.0.1</td>  
+    <td>
+      <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
+    </td> 
+  </tr>
+
+   <tr>
+    <td><img src="../images/daemon.png" alt="FreeBSD daemon"></td>
+    <td>FreeBSD</td>
+    <td>4, 5</td>
+    <td><b>Go
+	<a href="http://foo42.de/devel/lilypond-freebsd/">here</a>
+      </b>
+    </td>
+    <td>
+      2.0.2
+    </td>
+    <td><a href="mailto:atamaniuk-ports@frobs.net">Patrick Atamaniuk
+    </a></td>
+  </tr>
+
+  <tr>
+    <td><img src="../images/netbsd.jpeg" alt="NetBSD flag"></td>
+    <td>NetBSD</td>
+    <td>1.6</td>
+    <td><b>Go
+	<a href="http://foo42.de/devel/lilypond-netbsd/">here</a>
+      </b>
+    </td>
+    <td>
+      2.0.1
+    </td>
+    <td><a href="mailto:atamaniuk-pkgsrc@frobs.net">Patrick Atamaniuk
+    </a></td>
+  </tr>
+
+  <tr>
+    <td></td>
+    <td>Source</td>
+    <td></td>
+    <td><b>Download 
+	<a href="http://lilypond.org/download/v2.0/lilypond-2.0.3.tar.gz">tarball</a>
+	(<a href="../devel/#warning">warning</a>)
+      </b>
+    </td>
+    <td>
+      2.0.3
+    </td>
+    <td><a href="mailto:bug-lilypond@gnu.org"><b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> development
+	team</a></td>
+  </tr>
+  
+</tbody></table>
+
+
+
+
+<h2>Download <b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> 1.8</h2>
+
+<a name="1.8"></a>
+<table border="0" cellpadding="3" rules="rows">
+
+
+  <!-- use this as template for new entry !-->
+  <tbody><tr>
+    <th></th>
+    <th>Platform</th>
+    <th>Version</th>
+    <th>Go here</th>
+    <th><b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> version</th>
+    <th>Packager</th>
+  </tr>
+  
+<tr bgcolor="#e8ffe8">
+<td></td><td colspan="6"><h3>Linux</h3></td>
+  </tr>
+  
+  <tr>
+    <td>
+      <p align="center">
+	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
+      </p>
+    </td>
+    <td>Debian</td>
+    <td>
+      Sid
+    </td>
+    <td>
+      <b>Run</b> <tt>apt-get install <b style="color: black; background-color: rgb(255, 255, 102);">lilypond </b><b style="color: black; background-color: rgb(255, 255, 102);">lilypond</b>-doc</tt>
+    </td>
+    <td>1.8.1</td>
+    <td>Anthony Fok (Debian)</td>
+  </tr>
+
+  <tr>
+
+    <td><p align="center"><img src="../images/redhat-logo.png"></p></td>
+    <td>
+      Red Hat
+    </td>
+    <td>
+      9 
+    </td>
+    <td><b>Download 
+	<a href="http://lilypond.org/download/binaries/RedHat-9/lilypond-1.8.2-1.i386.rpm"><b style="color: black; background-color: rgb(255, 255, 102);">lilypond</b></a>,
+	
+	<a href="http://lilypond.org/download/binaries/RedHat-9/lilypond-documentation-1.8.2-1.i386.rpm">documentation</a></b>
+      (<a href="#redhat-notes">NOTE</a>)
+    </td>
+    <td>1.8.2</td>  
+    <td><a href="mailto:bug-lilypond@gnu.org"><b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> development team</a></td>
+  </tr>
+
+  <tr>
+    <td><p align="center"><img src="../images/redhat-logo.png"></p></td>
+    <td>
+      Red Hat 
+    </td>
+    <td>
+      8, 9
+    </td>
+    <td>
+      <b>Go to
+	<a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
+	  Planet CCRMA</a>
+      </b>
+    </td>
+    <td>1.8.0</td>
+    <td>
+      <a href="mailto:planetccrma@ccrma.stanford.edu">
+	PlanetCCRMA</a></td>
+  </tr>
+
+
+  <tr>
+    <td><p align="center"><img src="../images/mandrake-logo.jpeg"></p></td>
+    <td>
+      Mandrake
+    </td>
+    <td>
+      9.1
+    </td>
+    <td>
+      <b>Go to <a href="http://rpm.nyvalls.se/sound9.1.html">
+	  Thac's RPMs for mandrake</a>
+      </b>
+      (<a href="#mandrake-notes">NOTE</a>)
+    </td>
+    <td>1.8.0</td>
+    <td>Thac's RPMs for Mandrake</td>
+  </tr>
+
+  <tr>
+    <td>
+      <p align="center">
+	<img src="http://www.suse.com/images/suse_logo.png">
+      </p>
+    </td>
+    <td>
+      SuSE
+    </td>
+    <td>
+  9.0
+    </td>
+    <td>
+      <b>Download
+	<a href="ftp://ftp.suse.com/pub/suse/i386/9.0/suse/i586/lilypond-1.8.1-59.i586.rpm"><b style="color: black; background-color: rgb(255, 255, 102);">lilypond</b></a>,
+	<a href="ftp://ftp.suse.com/pub/suse/i386/9.0/suse/i586/lilypond-documentation-1.8.1-59.i586.rpm">documentation</a></b>
+    </td>
+    <td>1.8.1</td>  
+    <td>SuSE Gmbh.</td>
+  </tr>
+  
+  <tr>
+    <td><p align="center"><img src="../images/slackware-logo.png"></p></td>
+    <td>
+      Slackware 
+    </td>
+    <td>
+      9
+    </td>
+    <td>
+      <b>Download
+	<a href="ftp://ftp.connection.com.br/linux/slackware-9/lilypond/lilypond-1.8.1-i386-1.tgz">tarball</a></b>
+    </td>
+    <td>1.8.1</td>
+    <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
+  </tr>
+
+<tr bgcolor="#e8ffe8">
+<td></td><td colspan="6"><h3>Other</h3></td>
+  </tr>
+
+  <tr>
+    <td><p align="center"><img src="../images/macosx.jpeg"></p></td>
+    <td>
+      MacOS X/Fink
+    </td>
+    <td>
+      <tt>current-unstable</tt>
+    </td>
+    <td>
+      <b>  Go <a href="macos.html">here</a></b>
+    </td>
+    <td>1.8.1</td>  
+    <td>
+      <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
+    </td> 
+  </tr>
+
+
+  <tr>
+    <td><p align="center"><img src="../images/windows.png"></p></td>
+    <td>MS Windows</td>
+    <td>
+      Prev
+    </td>
+    <td>
+      <b>Go <a href="windows.html">here</a></b>
+    </td>
+    <td>1.8.2-1</td>
+    <td>
+      <a href="mailto:bug-lilypond@gnu.org"><b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> development team</a>
+    </td>
+  </tr>
+
+  <tr>
+    <td><img src="../images/daemon.png" alt="FreeBSD daemon"></td>
+    <td>FreeBSD</td>
+    <td>4, 5</td>
+    <td><b>Go
+	<a href="http://foo42.de/devel/lilypond-freebsd/">here</a>
+      </b>
+    </td>
+    <td>
+     1.8.2 
+    </td>
+    <td><a href="mailto:atamaniuk-ports@frobs.net">Patrick Atamaniuk
+	</a></td>
+  </tr>
+
+  <tr>
+    <td></td>
+    <td>Source</td><td></td>
+    <td>
+      <b>Download 
+	<a href="http://lilypond.org/download/v1.8/lilypond-1.8.2.tar.gz">tarball</a>
+      </b>
+      (<a href="../devel/#warning">warning</a>)
+    </td>
+    <td>
+      1.8.2
+    </td>
+    <td><a href="mailto:bug-lilypond@gnu.org"><b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> development
+	team</a>
+    </td>
+
+  </tr>
+
+</tbody></table>
+
+
+<h2>Download <b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> 1.6</h2>
+<a name="1.6"></a>
+
+
+<table border="0" cellpadding="" rules="rows">
+
+  <tbody><tr>
+    <th></th>
+    <th>Platform</th>
+    <th>Version</th>
+    <th>Go here</th>
+    <th><b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> version</th>
+    <th>Packager</th>
+  </tr>
+
+  <tr>
+    <td>
+      <p align="center">
+	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
+      </p>
+    </td>
+    <td>
+      Debian
+    </td>
+    <td>
+      Sid
+    </td>
+    <td>
+      <b>Go to
+	<a href="http://ftp.us.debian.org/debian/pool/main/l/lilypond/">ftp.xx.debian.org/debian/pool/main/l/<b style="color: black; background-color: rgb(255, 255, 102);">lilypond</b></a>
+      </b>
+    </td>
+    <td>1.6.9</td>
+    <td>Anthony Fok</td>
+  </tr>
+
+
+  <tr>
+    <td>
+      <p align="center">
+	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
+      </p>
+    </td>
+    <td>
+      Debian
+    </td>
+    <td>
+      Woody
+    </td>
+    <td>
+      <b>Download
+	<a href="http://serpent.laymusic.org/%7Elconrad/lilypond/lilypond_1.6.9-1_i386.deb">
+	  <b style="color: black; background-color: rgb(255, 255, 102);">lilypond</b></a>,
+	<a href="http://serpent.laymusic.org/%7Elconrad/lilypond/lilypond-doc_1.6.9-1_all.deb">
+	  documentation</a></b>
+    </td>
+    <td>1.6.9</td>
+    <td>Laura Conrad</td>
+  </tr>
+  
+  
+  <tr>
+    <td><p align="center"><img src="../images/mandrake-logo.jpeg"></p></td>
+    <td>
+      Mandrake
+    </td>
+    <td>
+      9.0
+    </td>
+    <td>
+      <b>Go to
+	<a href="http://rpm.nyvalls.se/sound9.0.html">
+	  Thac's RPMs for mandrake</a>
+      </b>
+    </td>
+    <td>1.6.7</td>
+    <td>Thac's RPMs for Mandrake</td>  
+  </tr>
+
+
+  <tr>
+    <td>
+      <p align="center">
+	<img src="http://www.suse.com/images/suse_logo.png">
+      </p>
+    </td>
+    <td>
+      SuSE
+    </td>
+    <td>
+      8.2
+    </td>
+    <td>
+      <b>Download
+	<a href="ftp://ftp.suse.com/pub/suse/i386/8.2/suse/i586/lilypond-1.6.6-67.i586.rpm"><b style="color: black; background-color: rgb(255, 255, 102);">lilypond</b></a>,
+	<a href="ftp://ftp.suse.com/pub/suse/i386/8.2/suse/i586/lilypond-documentation-1.6.6-67.i586.rpm">documentation</a></b>
+    </td>
+    <td>1.6.6</td>  
+    <td>SuSE Gmbh.</td>
+  </tr>
+
+  <tr>
+    <td><p align="center"><img src="../images/slackware-logo.png"></p></td>
+    <td>
+      Slackware 
+    </td>
+    <td>
+      9
+    </td>
+    <td>
+      <b>Download
+	<a href="ftp://ftp.connection.com.br/linux/slackware-9/lilypond/lilypond-1.6.11-i386-1.tgz">here</a>
+      </b>
+    </td>
+    <td>1.6.11</td>
+    <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
+  </tr>
+
+  <tr>
+    <td><p align="center"><img src="../images/windows.png"></p></td>
+    <td>
+      MS Windows</td>
+    <td>
+      Current/[curr]
+    </td>
+    <td>
+      <b>Go <a href="windows.html">here</a></b>
+    </td>
+    <td>1.6.11</td>
+    <td>
+      <a href="mailto:bug-lilypond@gnu.org"><b style="color: black; background-color: rgb(255, 255, 102);">LilyPond</b> development team</a>
+    </td> 
+  </tr>
+
+  <tr>
+    <td><p align="center"><img src="../images/macosx.jpeg"></p></td>
+    <td>
+      MacOS X/Fink
+    </td>
+    <td>
+      ?
+    </td>
+    <td>
+      <b>Go <a href="macos.html">here</a>
+      </b>
+    </td>
+    <td>?</td>  
+    <td>?</td> 
+  </tr>
+
+
+  
+  <tr>
+    <td></td>
+    <td></td><td></td>
+    <td>
+      <b>Download 
+	<a href="http://lilypond.org/download/v1.6/lilypond-1.6.12.tar.gz">tarball</a>
+      </b>
+      (<a href="../devel/#warning">warning</a>)
+    </td>
+    <td>
+      1.6.12
+    </td>
+  </tr>
+
+  
+</tbody></table>
